Добавлен функционал добавления новой статьи, и кнопка для редактирования, поставлен security на /blog/new/ и /blog/edit/

--- a/src/Dmitxe/UserBundle/Resources/views/layout.html.twig
+++ b/src/Dmitxe/UserBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends '@TDTSite/layout.html.twig' %}
+{% extends '@DmitxeSite/layout.html.twig' %}
 
 {% block content %}
     {% block fos_user_content %}{% endblock %}
