--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/article.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/article.html.twig
@@ -17,4 +17,11 @@
         <a href="{{ path('smart_blog_tag', {'slug': tag.slug}) }}"><span class="label label-info">{{ tag }}</span></a>
     {% endfor %}
 
+    {% if is_granted('ROLE_BLOGGER') %}
+        <hr />
+        <p>
+        <a href="{{ path('smart_blog_article_edit', {'id': article.id}) }}"><span class="btn">Редактирование</span></a>
+        </p>
+    {% endif %}
+
 {% endblock smart_blog_content %}
