--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/article_new.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/article_new.html.twig
@@ -4,7 +4,7 @@
 
     <form method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
-        <button type="submit" name="update" class="btn btn-primary">{{ 'Create'|trans }}</button>
+        <button type="submit" name="create" class="btn btn-primary">{{ 'Create'|trans }}</button>
     </form>
 
 {% endblock smart_blog_content %}
