--- a/src/Dmitxe/SiteBundle/Resources/views/layout.html.twig
+++ b/src/Dmitxe/SiteBundle/Resources/views/layout.html.twig
@@ -1,6 +1,6 @@
 {% extends '@Html/base.html.twig' %}
 
-{% block html_head_title %}{{ parent() }} TimeDev Team {% endblock html_head_title %}
+{% block html_head_title %}{{ parent() }} Dmitry Xe's Personal Site {% endblock html_head_title %}
 
 {% block html_head_meta %}{{ parent() }}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="{{ path('dmitxe_site_index') }}">TimeDev</a>
+                <a class="brand" href="{{ path('dmitxe_site_index') }}">Dmitry Xe</a>
                 <div class="nav-collapse">
 
                     {{ knp_menu_render('DmitxeSiteBundle:SiteMenu:main', {
@@ -77,7 +77,7 @@
 
     <div class="navbar navbar-fixed-bottom navbar">
         <div class="navbar-inner text-center">
-            <span class="navbar-text">TimeDev &copy; 2013</span>
+            <span class="navbar-text">Dmitxe &copy; 2013</span>
         </div>
     </div>
 
