--- a/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
+++ b/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
@@ -23,7 +23,12 @@
                     <li>Разработка &laquo;Бандла&raquo; для распределённого хранения файлов.</li>
                     <li>Форма обратной связи.</li>
                     <li>Возможность управлять тэгами для статей админу сайта.</li>
+                    <li>Фабрики для форм блога.</li>
                 </ul>
+
+                <h2>Тэги блога:</h2>
+
+                {{ render(controller('SmartBlogBundle:Tag:cloud')) }}
 
             </div>
         </div>
