--- a/src/Dmitxe/BlogBundle/Resources/views/Article/list.html.twig
+++ b/src/Dmitxe/BlogBundle/Resources/views/Article/list.html.twig
@@ -1,12 +1,20 @@
 {% extends 'SmartBlogBundle::layout.html.twig' %}
 
+{% block html_head_title %}
+    {{ parent() }}
+    {% if pagerfanta.currentPage > 1%}(Страница: {{ pagerfanta.currentPage }}){% endif %}
+{% endblock html_head_title %}
+
 {% block smart_blog_content %}
 
     {% block smart_blog_content_articles %}
         {% for article in pagerfanta.currentPageResults %}
             <h2><a href="{{ path('smart_blog_article', {'slug': article.slug}) }}">{{ article.title }}</a></h2>
 
-            <p><i class="icon-calendar"></i> {{ article.createdAt | localizeddate('full') }}</p>
+            <p>
+                <i class="icon-calendar"></i> {{ article.createdAt | localizeddate('full') }}
+                , написал <i class="icon-user"></i> <a href="#">{{ article.author }}</a>
+            </p>
 
             <p>{{ article.annotation }}</p>
 
@@ -21,9 +29,10 @@
     {% block smart_blog_articles_paginator %}
         {% if pagerfanta.haveToPaginate %}
             {{ pagerfanta(pagerfanta, 'twitter_bootstrap_translated', {
-                'routeName': 'smart_blog_page',
-                'css_container_class': 'pagination pagination-centered',
-            }) }}
+                    'routeName': 'smart_blog_page',
+                    'css_container_class': 'pagination pagination-centered',
+                })
+            }}
         {% endif %}
     {% endblock smart_blog_articles_paginator %}
 
