--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/Article/list.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/Article/list.html.twig
@@ -6,10 +6,7 @@
         {% for article in pagerfanta.currentPageResults %}
             <h2><a href="{{ path('smart_blog_article', {'slug': article.slug}) }}">{{ article.title }}</a></h2>
 
-            <p>
-                <i class="icon-calendar"></i> {{ article.createdAt | localizeddate('full') }}
-                , написал <i class="icon-user"></i> <a href="#">{{ article.author }}</a>
-            </p>
+            <p><i class="icon-calendar"></i> {{ article.createdAt | localizeddate('full') }}</p>
 
             <p>{{ article.annotation }}</p>
 
@@ -24,9 +21,10 @@
     {% block smart_blog_articles_paginator %}
         {% if pagerfanta.haveToPaginate %}
             {{ pagerfanta(pagerfanta, 'twitter_bootstrap_translated', {
-            'routeName': 'smart_blog_page',
-            'css_container_class': 'pagination pagination-centered',
-            }) }}
+                    'routeName': 'smart_blog_page',
+                    'css_container_class': 'pagination pagination-centered',
+                })
+            }}
         {% endif %}
     {% endblock smart_blog_articles_paginator %}
 
