--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/Tag/list_by_tag.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/Tag/list_by_tag.html.twig
@@ -1,4 +1,4 @@
-{% extends 'SmartBlogBundle::articles.html.twig' %}
+{% extends 'SmartBlogBundle:Article:list.html.twig' %}
 
 {% block smart_blog_content %}
     <h1>Статьи по тэгу: {{ tag }}</h1>
@@ -11,10 +11,11 @@
     {% block smart_blog_articles_paginator %}
         {% if pagerfanta.haveToPaginate %}
             {{ pagerfanta(pagerfanta, 'twitter_bootstrap_translated', {
-                'next_message': 'Вперёд &rarr;',
-                'prev_message': '&larr; Назад',
-                'css_container_class': 'pagination pagination-centered',
-            }) }}
+                    'next_message': 'Вперёд &rarr;',
+                    'prev_message': '&larr; Назад',
+                    'css_container_class': 'pagination pagination-centered',
+                })
+            }}
         {% endif %}
     {% endblock smart_blog_articles_paginator %}
 
