--- a/src/Dmitxe/BlogBundle/Resources/views/Article/show.html.twig
+++ b/src/Dmitxe/BlogBundle/Resources/views/Article/show.html.twig
@@ -13,9 +13,17 @@
 
     <p>{{ article.text|raw }}</p>
 
-    {% for tag in article.tags %}
-        <a href="{{ path('smart_blog_tag', {'slug': tag.slug}) }}"><span class="label label-info">{{ tag }}</span></a>
-    {% endfor %}
+    {% if article.tags|length %}
+        {{ 'Tags'|trans }}:
+        {% for tag in article.tags %}
+            <a href="{{ path('smart_blog_tag', {'slug': tag.slug}) }}"><span class="label label-info">{{ tag }}</span></a>
+        {% endfor %}
+    {% endif %}
+
+    {% if article.category %}
+        {{ 'Category'|trans }}:
+        <a href="{{ path('smart_blog_category', {'slug': article.category.slugFull}) }}"><span class="label label-success">{{ article.category }}</span></a>
+    {% endif %}
 
     {% if is_granted('ROLE_BLOGGER') %}
         <hr />
