--- a/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
+++ b/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
@@ -22,7 +22,7 @@
                 <ul>
                     <li>Разработка &laquo;Бандла&raquo; для распределённого хранения файлов.</li>
                     <li>Форма обратной связи.</li>
-                    <li>Возможность управлять тэгами для статей админу сайта.</li>
+                    <li>Возможность управлять тэгами и категориями блога админу сайта.</li>
                     <li>Фабрики для форм блога.</li>
                 </ul>
 
