Наработки по админке...

--- a/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
+++ b/src/Dmitxe/SiteBundle/Resources/views/Page/index.html.twig
@@ -28,7 +28,7 @@
 
                 <h2>Категории блога:</h2>
 
-                {{ knp_menu_render('SmartBlogBundle:CategoryMenu:full', {'currentClass': 'active'}) }}
+                {{ knp_menu_render('SmartBlogBundle:Category:tree', {'currentClass': 'active'}) }}
 
                 <h2>Тэги блога:</h2>
 
