--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/layout.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/layout.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>{% block smart_blog_html_title %}Smart Blog{% endblock smart_blog_html_title %}</title>
     <meta charset="UTF-8" />
 </head>
 <body>
