--- a/src/Dmitxe/NewsBundle/Resources/views/Article/edit.html.twig
+++ b/src/Dmitxe/NewsBundle/Resources/views/Article/edit.html.twig
@@ -1,14 +1,10 @@
 {% extends '@DmitxeNews/layout.html.twig' %}
 
+{% block html_head_title %} Написать новость: {{ form.vars.data.title }} &raquo; {{ parent() }} {% endblock html_head_title %}
+
 {% block smart_blog_content %}
 
-    {{ form_start(form) }}
-
-    {% include '@DmitxeNews/Article/form.html.twig' %}
-
-    <button type="submit" name="update" class="btn btn-primary">{{ 'Save'|trans }}</button>
-
-    {{ form_end(form) }}
+    {% include '@DmitxeNews/Article/form_edit.html.twig' %}
 
 {% endblock smart_blog_content %}
 
