--- a/src/Dmitxe/BlogBundle/Resources/views/Admin/layout.html.twig
+++ b/src/Dmitxe/BlogBundle/Resources/views/Admin/layout.html.twig
@@ -1,6 +1,6 @@
 {% extends '@DmitxeSite/Admin/index.html.twig' %}
 
-{% block html_head_title %} Блог &raquo; {{ parent() }} {% endblock html_head_title %}
+{% block html_head_title %} {{ 'Admin'|trans }} &raquo; {{ parent() }} {% endblock html_head_title %}
 
 {% block content %}
     {{ parent() }}
