и еще чуть чуть правок по шаблонам.

--- a/src/Dmitxe/NewsBundle/Resources/views/Article/form.html.twig
+++ b/src/Dmitxe/NewsBundle/Resources/views/Article/form.html.twig
@@ -42,3 +42,6 @@
     {{ form_errors(form.keywords) }}
     {{ form_widget(form.keywords, {'attr': {'class': 'input-block-level'} }) }}
 </div>
+
+{{ tinymce_init() }}
+{{ elfinder_tinymce_init() }}
