--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/Admin/Tag/create.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/Admin/Tag/create.html.twig
@@ -6,7 +6,7 @@
 
     {% include 'SmartBlogBundle:Tag:form.html.twig' %}
 
-    <button type="submit" name="update" class="btn btn-primary">{{ 'Create'|trans }}</button>
+    <button type="submit" name="create" class="btn btn-primary">{{ 'Create'|trans }}</button>
 
     {{ form_end(form) }}
 
