Наработки по формам и шаблонам.

--- a/src/Dmitxe/NewsBundle/Resources/views/Article/create.html.twig
+++ b/src/Dmitxe/NewsBundle/Resources/views/Article/create.html.twig
@@ -4,6 +4,6 @@
 
 {% block smart_blog_content %}
 
-    {% include '@DmitxeNews/Article/form_create.html.twig' %}
+    {% include '@DmitxeNews/Article/form.html.twig' %}
 
 {% endblock smart_blog_content %}
