--- a/src/SmartCore/Bundle/BlogBundle/Resources/views/Article/edit.html.twig
+++ b/src/SmartCore/Bundle/BlogBundle/Resources/views/Article/edit.html.twig
@@ -2,6 +2,6 @@
 
 {% block smart_blog_content %}
 
-    {% include 'SmartBlogBundle:Article:form_edit.html.twig' %}
+    {% include 'SmartBlogBundle:Article:form.html.twig' %}
 
 {% endblock smart_blog_content %}
